src/ast/snapshots/rust_interpreter__ast__expression__test__operator_precedence_10.snap
---
source: src/ast/expression.rs
description: 5 < 4 != 3 > 4
expression: first
---
((5 < 4) != (3 > 4));
