src/ast/snapshots/rust_interpreter__ast__expression__test__operator_precedence_11.snap
---
source: src/ast/expression.rs
description: 3 + 4 * 5 == 3 * 1 + 4 * 5
expression: first
---
((3 + (4 * 5)) == ((3 * 1) + (4 * 5)));
