src/ast/snapshots/rust_interpreter__ast__expression__test__operator_precedence_14.snap
---
source: src/ast/expression.rs
description: 3 > 5 == false
expression: first
---
((3 > 5) == false);
