src/ast/snapshots/rust_interpreter__ast__expression__test__operator_precedence_16.snap
---
source: src/ast/expression.rs
description: 1 + (2 + 3) + 4
expression: first
---
((1 + (2 + 3)) + 4);
