src/ast/snapshots/rust_interpreter__ast__expression__test__operator_precedence_20.snap
---
source: src/ast/expression.rs
description: "!(true == true)"
expression: first
---
(!(true == true));
