src/ast/snapshots/rust_interpreter__ast__expression__test__operator_precedence_8.snap
---
source: src/ast/expression.rs
description: a + b * c + d / e - f
expression: first
---
(((a + (b * c)) + (d / e)) - f);
