src/ast/snapshots/rust_interpreter__ast__expression__test__prefix_expression_1.snap
---
source: src/ast/expression.rs
description: "-5;"
expression: first
---
ExpressionStatement(
    Prefix { token: "-", right: Int(5) },
)
