src/ast/snapshots/rust_interpreter__ast__expression__test__prefix_expression_2.snap
---
source: src/ast/expression.rs
description: "!foobar;"
expression: first
---
ExpressionStatement(
    Prefix { token: "!", right: Identifier("foobar") },
)
